--- a/resources/css/tooltips-LEGACY.css
+++ b/resources/css/tooltips-LEGACY.css
@@ -1,5 +1,5 @@
 .qtip {
-    font: 11px Arial, Verdana, Helvetica, sans-serif;
+    font: 11px arial,helvetica,liberation sans,bitstream vera sans,freesans,clean,sans-serif;
     z-index  : 6000 !important;
     border-width: 0px;
 }
